fixed char. card gen consuming gameboard elements for cards not active